selfhost/tests/neg/storedlambda.ail
// EXPECT: must be an inline lambda
f := fn(x) x * 2
println(map([1, 2, 3], f))
